change from bcrypt to bcryptjs

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Oracle Polska team",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^0.8.3",
+    "bcryptjs": "*",
     "body-parser": "^1.12.4",
     "express": "^4.12.4",
     "jsonwebtoken": "^5.0.1",
